# workflow-template

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  02_rag_system.py  03_persona_interactions.py  04_document_processing.py  05_langgraph_integration.py
sample_docs/: ai_basics.txt  czero_engine.md  semantic_search.txt
src/czero_engine/: __init__.py  cli.py  client.py  models.py
src/czero_engine/workflows/: __init__.py  document_processing.py  knowledge_base.py  persona_workflow.py  rag_workflow.py
tests/: test_all_endpoints.py  test_integration.py  test_processing_pipeline.py
